--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -562,10 +562,14 @@
   "wallet.backup.recovery.phrase.dialog.title": "Recovery phrase",
   "wallet.backup.recovery.phrase.display.dialog.backup.instructions": "Please make sure you write down the {walletRecoveryPhraseWordCount} words of your wallet recovery phrase <strong>on a piece of paper in the exact order shown here</strong>.",
   "wallet.backup.recovery.phrase.display.dialog.button.label.iHaveWrittenItDown": "Yes, I have written down my wallet recovery phrase.",
+  "wallet.backup.recovery.phrase.entry.dialog.recoveryPhraseInputHint": "Enter your {numberOfWords}-word recovery phrase",
+  "wallet.backup.recovery.phrase.entry.dialog.recoveryPhraseInputLabel": "Verify your recovery phrase",
+  "wallet.backup.recovery.phrase.entry.dialog.recoveryPhraseInputNoResults": "No results",
+  "wallet.backup.recovery.phrase.entry.dialog.recoveryPhraseInvalidMnemonics": "Invalid recovery phrase",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.offline": "I understand that the simplest way to keep my wallet recovery phrase secure is to never store it digitally or online. If I decide to use an online service, such as a password manager with an encrypted database, it is my responsibility to make sure that I use it correctly.",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "I understand that the only way to recover my wallet if my computer is lost, broken, stolen, or stops working is to use my wallet recovery phrase.",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>I understand that I will need the wallet recovery phrase of this wallet to receive my Incentivized Testnet ada rewards on the Cardano mainnet.</strong>",
-  "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "Verify your wallet recovery phrase by clicking words in the exact order you wrote them down.",
+  "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "Please enter your {wordCount}-word wallet recovery phrase. Make sure you enter the words in the correct order.",
   "wallet.byron.badge.label": "Byron",
   "wallet.byron.notification.actionLearnMore": "Learn more",
   "wallet.byron.notification.actionMove": "Move ada to an existing wallet",
@@ -648,7 +652,6 @@
   "wallet.receive.pdf.networkLabel": "Cardano network:",
   "wallet.receive.pdf.noteLabel": "Note:",
   "wallet.receive.pdf.title": "Daedalus Cardano ada address",
-  "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "Clear",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "Confirm",
   "wallet.restore.dialog.configurationStep": "Configuration",
   "wallet.restore.dialog.confirmation.button.cancelButtonLabel": "Back to wallet restoration",
