--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -562,10 +562,14 @@
   "wallet.backup.recovery.phrase.dialog.title": "復元フレーズ",
   "wallet.backup.recovery.phrase.display.dialog.backup.instructions": "ここに示されている通り、{walletRecoveryPhraseWordCount}語のウォレット復元フレーズを必ず<strong>正しい順序で紙に書き留めてください。</strong>",
   "wallet.backup.recovery.phrase.display.dialog.button.label.iHaveWrittenItDown": "はい、ウォレットの復元フレーズを書き留めました",
+  "wallet.backup.recovery.phrase.entry.dialog.recoveryPhraseInputHint": "{numberOfWords}語のウォレット復元フレーズを入力してください",
+  "wallet.backup.recovery.phrase.entry.dialog.recoveryPhraseInputLabel": "復元フレーズを検証してください",
+  "wallet.backup.recovery.phrase.entry.dialog.recoveryPhraseInputNoResults": "該当するフレーズは見つかりませんでした",
+  "wallet.backup.recovery.phrase.entry.dialog.recoveryPhraseInvalidMnemonics": "無効な復元フレーズ",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.offline": "ウォレット復元フレーズを安全に保管する最もシンプルな方法はデジタルまたはオンラインに保存しないことであることを理解しました。暗号化データベース付きパスワードマネージャーなどオンラインサービスを使用する場合は、自己責任で適切に使用します。",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.recovery": "コンピューターが喪失、故障、盗難、作動不能などとなった場合、ウォレットは復元フレーズを使用することによってのみ復元することができることを理解しました。",
   "wallet.backup.recovery.phrase.entry.dialog.terms.and.condition.rewards": "<strong>インセンティブ付きテストネットで得た報酬ADAをCardanoメインネットで受け取る際、このウォレットの復元フレーズが必要であることを理解しました。</strong>",
-  "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "書き留めた通りの正しい順に単語をクリックして、ウォレットの復元フレーズを検証してください。",
+  "wallet.backup.recovery.phrase.entry.dialog.verification.instructions": "{wordCount}語のウォレット復元フレーズを入力してください。入力は正しい順序で行ってください。",
   "wallet.byron.badge.label": "残高",
   "wallet.byron.notification.actionLearnMore": "もっと知る",
   "wallet.byron.notification.actionMove": "既存のウォレットにADAを移す",
@@ -648,7 +652,6 @@
   "wallet.receive.pdf.networkLabel": "Cardanoネットワーク：",
   "wallet.receive.pdf.noteLabel": "メモ：",
   "wallet.receive.pdf.title": "Daedalus Cardano ADAアドレス",
-  "wallet.recovery.phrase.show.entry.dialog.button.labelClear": "取り消す",
   "wallet.recovery.phrase.show.entry.dialog.button.labelConfirm": "確認する",
   "wallet.restore.dialog.configurationStep": "設定",
   "wallet.restore.dialog.confirmation.button.cancelButtonLabel": "ウォレット復元に戻る",
