--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -175,7 +175,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Not enough ada . Try sending a smaller amount.",
+        "defaultMessage": "!!!Not enough ada. Try sending a smaller amount.",
         "description": "\"Not enough ada . Try sending a smaller amount.\" error message",
         "end": {
           "column": 3,
@@ -228,6 +228,34 @@
         "start": {
           "column": 33,
           "line": 83
+        }
+      },
+      {
+        "defaultMessage": "!!!Invalid transaction.",
+        "description": "\"Invalid transaction.\" error message",
+        "end": {
+          "column": 3,
+          "line": 94
+        },
+        "file": "source/renderer/app/api/errors.js",
+        "id": "api.errors.utxoTooSmall",
+        "start": {
+          "column": 16,
+          "line": 90
+        }
+      },
+      {
+        "defaultMessage": "!!!Funds cannot be transferred from this wallet because it contains some unspent transaction outputs (UTXOs), with amounts of ada that are too small to be migrated.",
+        "description": "\"Funds cannot be transferred from this wallet because it contains some unspent transaction outputs (UTXOs), with amounts of ada that are too small to be migrated.\" error message",
+        "end": {
+          "column": 3,
+          "line": 101
+        },
+        "file": "source/renderer/app/api/errors.js",
+        "id": "api.errors.nothingToMigrate",
+        "start": {
+          "column": 20,
+          "line": 95
         }
       }
     ],
@@ -9599,13 +9627,13 @@
         "description": "Title  in the transfer funds form.",
         "end": {
           "column": 3,
-          "line": 17
+          "line": 19
         },
         "file": "source/renderer/app/components/wallet/transfer-funds/TransferFundsStep1Dialog.js",
         "id": "wallet.transferFunds.dialog1.title",
         "start": {
           "column": 15,
-          "line": 13
+          "line": 15
         }
       },
       {
@@ -9613,13 +9641,13 @@
         "description": "sourceWallet in the transfer funds form.",
         "end": {
           "column": 3,
-          "line": 22
+          "line": 24
         },
         "file": "source/renderer/app/components/wallet/transfer-funds/TransferFundsStep1Dialog.js",
         "id": "wallet.transferFunds.dialog1.sourceWallet",
         "start": {
           "column": 16,
-          "line": 18
+          "line": 20
         }
       },
       {
@@ -9627,13 +9655,13 @@
         "description": "targetWallet in the transfer funds form.",
         "end": {
           "column": 3,
-          "line": 27
+          "line": 29
         },
         "file": "source/renderer/app/components/wallet/transfer-funds/TransferFundsStep1Dialog.js",
         "id": "wallet.transferFunds.dialog1.targetWallet",
         "start": {
           "column": 16,
-          "line": 23
+          "line": 25
         }
       },
       {
@@ -9641,13 +9669,13 @@
         "description": "buttonLabel in the transfer funds form.",
         "end": {
           "column": 3,
-          "line": 32
+          "line": 34
         },
         "file": "source/renderer/app/components/wallet/transfer-funds/TransferFundsStep1Dialog.js",
         "id": "wallet.transferFunds.dialog1.continueLabel",
         "start": {
           "column": 15,
-          "line": 28
+          "line": 30
         }
       }
     ],
