--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -14,6 +14,8 @@
   "api.errors.WalletAlreadyRestoredError": "復元しようとしているウォレットは既に存在します。",
   "api.errors.WalletFileImportError": "ウォレットをインポートできませんでした。有効なファイルを指定していることを確認してください。",
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
+  "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
+  "api.errors.utxoTooSmall": "無効なトランザクションです。",
   "automaticUpdate.accept.button.label": "Daedalusを再起動して更新する",
   "automaticUpdate.description1": "現在実行中のDaedalus <b>{currentAppVersion}</b>は<b>{nextUpdateVersion}</b>に更新できます。",
   "automaticUpdate.description2": "今すぐ最新版をインストールしますか。更新を保留すると、Daedalusを次回起動する時に自動的にインストールされます。",
