Updated stake pool tooltip to display 'Produced blocks' instead of 'Blocks (current epoch)'

--- a/source/renderer/app/i18n/locales/defaultMessages.json
+++ b/source/renderer/app/i18n/locales/defaultMessages.json
@@ -5406,7 +5406,7 @@
         }
       },
       {
-        "defaultMessage": "!!!Blocks (current epoch):",
+        "defaultMessage": "!!!Produced blocks:",
         "description": "\"Blocks\" for the Stake Pools Tooltip page.",
         "end": {
           "column": 3,
