--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -6,6 +6,7 @@
   "api.errors.IncorrectPasswordError": "Incorrect wallet password.",
   "api.errors.NotEnoughFundsForTransactionError": "Not enough ada. Try sending a smaller amount.",
   "api.errors.NotEnoughFundsForTransactionFeesError": "Not enough ada for fees. Try sending a smaller amount.",
+  "api.errors.inputsDepleted": "Cannot send from a wallet that contains only rewards balances.",
   "api.errors.NotEnoughMoneyToSendError": "Not enough money to make this transaction.",
   "api.errors.TooBigTransactionError": "Transaction too big due to too many inputs.",
   "api.errors.TooBigTransactionErrorLinkLabel": "Learn more.",
