--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -335,6 +335,7 @@
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "続ける",
   "staking.delegationSetup.chooseWallet.step.dialog.description": "委任する資金の入ったウォレットを選んでください。委任を有効にするためには選択されたウォレットに<span>{minDelegationFunds}ADA以上</span>の資金が入っている必要があります。",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFunds": "選択されたウォレットには委任を有効にするために必要な最低額{minDelegationFunds}ADAが入っていません。<span>{minDelegationFunds}ADA以上</span>入っているウォレットを選択して、[続ける]をクリックしてください。",
+  "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFundsUTXO": "このウォレットには委任を有効にするために必要な最低UTXO残高{minDelegationFunds}ADAが入っていません。<span>{minDelegationFunds}ADA以上</span>入っているウォレットを選択して、[続ける]をクリックしてください。",
   "staking.delegationSetup.chooseWallet.step.dialog.errorRestoringWallet": "このウォレットは現在同期中のため委任に使用することができません。",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputLabel": "ウォレット",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "ウォレットを選択してください",
