--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -335,7 +335,7 @@
   "staking.delegationSetup.chooseWallet.step.dialog.continueButtonLabel": "Continue",
   "staking.delegationSetup.chooseWallet.step.dialog.description": "Choose a wallet that holds the funds you want to delegate. The selected wallet must contain a <span>minimum amount of {minDelegationFunds} ADA</span> for delegation to be an option.",
   "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFunds": "This wallet does not contain the minimum amount of {minDelegationFunds} ADA which is required for delegation to be available. Please select a wallet with <span>a minimum amount of {minDelegationFunds} ADA</span> and click continue.",
-  "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFundsUTXO": "This wallet does not contain the minimum amount of {minDelegationFunds} ADA in the UTXO balances which is required for delegation to be available. Please select a wallet with <span>a minimum amount of {minDelegationFunds} ADA</span> and click continue.",
+  "staking.delegationSetup.chooseWallet.step.dialog.errorMinDelegationFundsUTXO": "This wallet does not contain the minimum amount of {minDelegationFunds} ADA in the UTXO balances which is required for delegation to be available.",
   "staking.delegationSetup.chooseWallet.step.dialog.errorRestoringWallet": "This wallet can’t be used for delegation while it’s being synced.",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputLabel": "Wallet",
   "staking.delegationSetup.chooseWallet.step.dialog.selectWalletInputPlaceholder": "Select wallet",
