--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -454,6 +454,7 @@
   "staking.stakePools.rankingSelectWallet": "select a wallet",
   "staking.stakePools.rankingSelectWalletEnd": "to set the amount you intend to delegate.",
   "staking.stakePools.rankingSelectWalletStart": "Or",
+  "staking.stakePools.sandClockTooltip": "Data not available yet",
   "staking.stakePools.search.delegatingListTitle": "Staking pools you are delegating to",
   "staking.stakePools.search.listTitle": "Stake pools ({pools})",
   "staking.stakePools.search.searchInputPlaceholder": "Search stake pools",
