[DDW-327] Fix epoch duration copy (#2107)
* [DDW-327] Fix epoch duration copy - EN

* [DDW-327] CHANGELOG and translation manager

* [DDW-327] Fix epoch duration copy - JP

* [DDW-327] bump version

* only build testnet

* Revert "only build testnet"

This reverts commit 8c5eed342419c4d8a5169a9a290b59132eb8f1e6.

* [DDW-327] Fix epoch duration copy - JP

* Use correct rewards screen for Mainnet and Testnet networks

* Fix CHANGELOG

Co-authored-by: Samuel Leathers <samuel.leathers@iohk.io>
Co-authored-by: Nikola Glumac <niglumac@gmail.com>

--- a/source/renderer/app/i18n/locales/ja-JP.json
+++ b/source/renderer/app/i18n/locales/ja-JP.json
@@ -17,7 +17,6 @@
   "api.errors.invalidAddress": "有効なアドレスを入力してください。",
   "api.errors.nothingToMigrate": "このウォレットに保有されている未使用トランザクションアウトプット（UTXO）の一部に、移行するために十分なADAが入っていないため、このウォレットから資金を移すことはできません。",
   "api.errors.utxoTooSmall": "無効なトランザクションです。",
-  "appUpdate.manualUpdateOverlay.button.label": "!!!Follow instructions and manually update",
   "automaticUpdate.accept.button.label": "Daedalusを再起動して更新する",
   "automaticUpdate.description1": "現在実行中のDaedalus <b>{currentAppVersion}</b>は<b>{nextUpdateVersion}</b>に更新できます。",
   "automaticUpdate.description2": "今すぐ最新版をインストールしますか。更新を保留すると、Daedalusを次回起動する時に自動的にインストールされます。",
@@ -317,7 +316,7 @@
   "staking.delegationCenter.unknownStakePoolLabel": "不明の",
   "staking.delegationCenter.walletAmount": "{amount}ADA",
   "staking.delegationCountdown.buttonLabel": "もっと知る",
-  "staking.delegationCountdown.description": "Cardanoはまもなく連合型システムから分散型システムへの移行を開始します。その第一歩はShelleyアップグレードの有効化です。アップグレードが完了すると、ステークプールの登録が開始され、ユーザーはウォレットを委任できるようになります。2エポック（12時間）後、ステークプールはブロックの生成を開始し、ユーザーは自分のステークを委任することにより報酬を稼ぎ始めることができるようになります。最初の報酬の配分は（予定されている場合）、さらに2エポック（12時間）後となります。",
+  "staking.delegationCountdown.description": "Cardanoはまもなく連合型システムから分散型システムへの移行を開始します。その第一歩はShelleyアップグレードの有効化です。アップグレードが完了すると、ステークプールの登録が開始され、ユーザーはウォレットを委任できるようになります。2エポック（10日）後、ステークプールはブロックの生成を開始し、ユーザーは自分のステークを委任することにより報酬を稼ぎ始めることができるようになります。最初の報酬の配分は（予定されている場合）、さらに2エポック（10日）後となります。",
   "staking.delegationCountdown.heading": "Shelleyアップグレード",
   "staking.delegationCountdown.timeLeftDesc": "Shelley開始まであと",
   "staking.delegationSetup.chooseStakePool.step.dialog.continueButtonLabel": "続ける",
