--- a/source/renderer/app/i18n/locales/en-US.json
+++ b/source/renderer/app/i18n/locales/en-US.json
@@ -17,7 +17,6 @@
   "api.errors.invalidAddress": "Please enter a valid address.",
   "api.errors.nothingToMigrate": "Funds cannot be transferred from this wallet because it contains some unspent transaction outputs (UTXOs), with amounts of ada that are too small to be migrated.",
   "api.errors.utxoTooSmall": "Invalid transaction.",
-  "appUpdate.manualUpdateOverlay.button.label": "!!!Follow instructions and manually update",
   "automaticUpdate.accept.button.label": "Restart Daedalus and Update",
   "automaticUpdate.description1": "You are currently running Daedalus <b>{currentAppVersion}</b> and <b>{nextUpdateVersion}</b> is available.",
   "automaticUpdate.description2": "Would you like to install the update? If choose to postpone, the update will be installed automatically on the next Daedalus launch.",
@@ -317,7 +316,7 @@
   "staking.delegationCenter.unknownStakePoolLabel": "unknown",
   "staking.delegationCenter.walletAmount": "{amount} ADA",
   "staking.delegationCountdown.buttonLabel": "Learn more",
-  "staking.delegationCountdown.description": "Cardano will soon start transitioning from a federated to a decentralized system. The first step is the activation of the Shelley upgrade. Once the upgrade is complete, stake pools will start registering and users will be able to delegate their wallets. Two epochs (12 hours) later, stake pools will begin producing blocks and users could start earning rewards from delegating their stakes. The first rewards, where due, will be distributed two more epochs later (12 hours).",
+  "staking.delegationCountdown.description": "Cardano will soon start transitioning from a federated to a decentralized system. The first step is the activation of the Shelley upgrade. Once the upgrade is complete, stake pools will start registering and users will be able to delegate their wallets. Two epochs (10 days) later, stake pools will begin producing blocks and users could start earning rewards from delegating their stakes. The first rewards, where due, will be distributed two more epochs later (10 days).",
   "staking.delegationCountdown.heading": "Shelley upgrade",
   "staking.delegationCountdown.timeLeftDesc": "Shelley upgrade in",
   "staking.delegationSetup.chooseStakePool.step.dialog.continueButtonLabel": "Continue",
